--- a/index.html
+++ b/index.html
@@ -15,24 +15,28 @@
 
 </head>
 
-<body class="page">
+<body>
+    <header class="header">
+        <nav class="nav">
+            <a class="logo link" href="./index.html">
+                <span>Web</span>studio</a>
 
-    <header>
-        <nav>
-            <a href="./index.html" class="logo">Webstudio</a>
+            <ul class="nav-list list">
 
-            <ul class="site-nav list">
-
-                <li> <a href="./index.html" class="link current">Studio</a></li>
-                <li> <a href="./portfolio.html">Portfolio</a></li>
-                <li> <a href="#">Contacts</a></li>
+                <li class="nav-item"> <a class="nav-link link" href="./index.html">Studio</a></li>
+                <li class="nav-item"> <a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="nav-item"> <a class="nav-link link" href="#">Contacts</a></li>
             </ul>
         </nav>
 
-        <address>
-            <ul class="auth-nav list">
-                <li> <a href="malto:info@devstudio.com">info@devstudio.com</a></li>
-                <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="adress">
+            <ul class="adress-list list">
+                <li class="adres-item"> <a class="adress-link link"
+                        href="malto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="adres-item"> <a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+
             </ul>
         </address>
     </header>
@@ -41,7 +45,7 @@
 
         <section class="hero">
             <h1 class="hero-title">Effective Solutions <br /> for Your Business</h1>
-            <button type="button" class="button">Order Service</button>
+            <button type="button" class="hero-button">Order Service</button>
         </section>
 
         <section class="features">
