--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>webstudio</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet" />
@@ -52,25 +52,25 @@
             <h2 class="visually-hidden">Our privilege</h2>
             <ul class="feature-list">
                 <li>
-                    <h2 class="title">Strategy</h2>
+                    <h3 class="title">Strategy</h3>
                     <p class="text">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.
                     </p>
                 </li>
                 <li>
-                    <h2 class="title">Punctuality</h2>
+                    <h3 class="title">Punctuality</h3>
                     <p class="text">Bring the key message to the brand's audience for the best price within the shortest
                         possible
                         time.</p>
                 </li>
                 <li>
-                    <h2 class="title">Diligence</h2>
+                    <h3 class="title">Diligence</h3>
                     <p class="text">Research and confirm brands that present the strongest digital growth opportunities
                         and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h2 class="title">Technologies</h2>
+                    <h3 class="title">Technologies</h3>
                     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
@@ -78,7 +78,7 @@
         </section>
 
         <section class="work">
-            <h2 class="work-title">What are we doing</h2>
+            <h3 class="work-title">What are we doing</h3>
             <ul class="work-list">
                 <li>
 
@@ -94,7 +94,7 @@
         </section>
 
         <section class="staff works">
-            <h2 class="staff-title">Our Team</h2>
+            <h3 class="staff-title">Our Team</h3>
             <ul class="work-list">
                 <li>
                     <img src="./images/img-4.jpg" alt="photo of a man on a document Product Designer" width="264">
