--- a/index.html
+++ b/index.html
@@ -2,132 +2,103 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webstudio</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet" />
+    <title>Document</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-
 </head>
 
+
+    <-- Header section -->
+
 <body>
-    <header class="header">
-        <nav class="nav">
-            <a class="logo link" href="./index.html">
-                <span>Web</span>studio</a>
 
-            <ul class="nav-list list">
-
-                <li class="nav-item"> <a class="nav-link link" href="./index.html">Studio</a></li>
-                <li class="nav-item"> <a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
-                <li class="nav-item"> <a class="nav-link link" href="#">Contacts</a></li>
-            </ul>
+    <header>
+       
+        <li> <a href="#">Contacts</a></li>
+        </ul>
         </nav>
 
-        <address class="adress">
-            <ul class="adress-list list">
-                <li class="adres-item"> <a class="adress-link link"
-                        href="malto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="adres-item"> <a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-
+        <address>
+            <ul>
+                <li> <a href="">info@devstudio.com</a></li>
+                <li> <a href="">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
 
     <main>
 
-        <section class="hero">
-            <h1 class="hero-title">Effective Solutions <br /> for Your Business</h1>
-            <button type="button" class="hero-button">Order Service</button>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="submit">Order Service</button>
+            @@ -54,7 +49,8 @@ <h2>Punctuality</h2>
+            </li>
+            <li>
+                <h2>Diligence</h2>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <p>Research and confirm brands that present the strongest digital growth opportunities and
+                    minimize
+                    risk.</p>
+            </li>
+            <li>
+                @@ -70,13 +66,13 @@ <h2>What are we doing</h2>
+                <ul>
+                    <li>
+
+                        <img src="./images/img 1-2.jpg" alt="Computer on desktop" width="360" />
+                        <img src="./images/img-1.jpg" alt="Computer on desktop" width="360" />
+                    </li>
+                    <li>
+                        <img src="./images/img 2-2.jpg" alt="phone and tabs" width="360" />
+                        <img src="./images/img-2.jpg" alt="phone and tabs" width="360" />
+                    </li>
+                    <li>
+                        <img src="./images/img 3-2.jpg" alt="phone and computer connected" width="360" />
+                        <img src="./images/img-3.jpg" alt="phone and computer connected" width="360" />
+                    </li>
+                </ul>
         </section>
+        @@ -85,25 +81,25 @@ <h2>What are we doing</h2>
+        <h2>Our Team</h2>
+        <ul>
+            <li>
+                <img src="./images/img-1-2.jpg" alt="photo of a man on a document Product Designer" width=" 264">
+                <img src="./images/img-4.jpg" alt="photo of a man on a document Product Designer" width="264">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
 
-        <section class="features">
-            <h2 class="visually-hidden">Our privilege</h2>
-            <ul class="feature-list">
-                <li>
-                    <h3 class="title">Strategy</h3>
-                    <p class="text">Our goal is to identify the business problem to walk away with the perfect and
-                        creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">Punctuality</h3>
-                    <p class="text">Bring the key message to the brand's audience for the best price within the shortest
-                        possible
-                        time.</p>
-                </li>
-                <li>
-                    <h3 class="title">Diligence</h3>
-                    <p class="text">Research and confirm brands that present the strongest digital growth opportunities
-                        and minimize
-                        risk.</p>
-                </li>
-                <li>
-                    <h3 class="title">Technologies</h3>
-                    <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.</p>
-                </li>
-            </ul>
-        </section>
+            <li>
+                <img src="./images/img-2-2.jpg" alt="photo of a man on a document Frontend Developer" width="264">
+                <img src="./images/img-5.jpg" alt="photo of a man on a document Frontend Developer" width="264">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
 
-        <section class="work">
-            <h3 class="work-title">What are we doing</h3>
-            <ul class="work-list">
-                <li>
+            <li>
+                <img src="./images/img-3-2.jpg" alt="photo of a woman on a document Marketing" width="264">
+                <img src="./images/img-6.jpg" alt="photo of a woman on a document Marketing" width="264">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
 
-                    <img src="./images/img-1.jpg" alt="Computer on desktop" width="360" />
-                </li>
-                <li>
-                    <img src="./images/img-2.jpg" alt="phone and tabs" width="360" />
-                </li>
-                <li>
-                    <img src="./images/img-3.jpg" alt="phone and computer connected" width="360" />
-                </li>
-            </ul>
-        </section>
-
-        <section class="staff works">
-            <h3 class="staff-title">Our Team</h3>
-            <ul class="work-list">
-                <li>
-                    <img src="./images/img-4.jpg" alt="photo of a man on a document Product Designer" width="264">
-                    <h3 class="title">Mark Guerrero</h3>
-                    <p class="text">Product Designer</p>
-                </li>
-
-                <li>
-                    <img src="./images/img-5.jpg" alt="photo of a man on a document Frontend Developer" width="264">
-                    <h3 class="title">Tom Ford</h3>
-                    <p class="text">Frontend Developer</p>
-                </li>
-
-                <li>
-                    <img src="./images/img-6.jpg" alt="photo of a woman on a document Marketing" width="264">
-                    <h3 class="title">Camila Garcia</h3>
-                    <p class="text">Marketing</p>
-                </li>
-
-                <li>
-                    <img src="./images/img-7.jpg" alt="photo of a man on a document UI Designer" width="264">
-                    <h3 class="title">Daniel Wilson</h3>
-                    <p class="text">UI Designer</p>
-                </li>
-            </ul>
+            <li>
+                <img src="./images/img-4-2.jpg" alt="photo of a man on a document UI Designer" width="264">
+                <img src="./images/img-7.jpg" alt="photo of a man on a document UI Designer" width="264">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
         </section>
     </main>
-
     <footer>
         <a href="./index.html">Webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
-
 </body>
 
 </html>
