--- a/index.html
+++ b/index.html
@@ -5,100 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Document</title>
-
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>webstudio</title>
 </head>
-
-
-    <-- Header section -->
 
 <body>
 
-    <header>
-       
-        <li> <a href="#">Contacts</a></li>
-        </ul>
-        </nav>
+    <a>
+        <!-- Logo -->
 
-        <address>
-            <ul>
-                <li> <a href="">info@devstudio.com</a></li>
-                <li> <a href="">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <span>Wed</span>studio</a>
+    <nav>
+
+        <ul>
+            <li> <a href=""></a>studio</li>
+            <li> <a href=""></a>portfolio</li>
+            <li> <a href=""></a>contacts</li>
+        </ul>
+
+    </nav>
+
+    <address>
+        <ul>
+            <li> <a href="mailto:info@devstudio.com> info@devstudio.com </a> </li>
+            <li>
+                <+38 href=" +38 096 111 11 11">+38 096 111 11 11 </a> </li>
+        </ul>
+    </address>
+
+
+
     </header>
 
-    <main>
-
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="submit">Order Service</button>
-            @@ -54,7 +49,8 @@ <h2>Punctuality</h2>
-            </li>
-            <li>
-                <h2>Diligence</h2>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                <p>Research and confirm brands that present the strongest digital growth opportunities and
-                    minimize
-                    risk.</p>
-            </li>
-            <li>
-                @@ -70,13 +66,13 @@ <h2>What are we doing</h2>
-                <ul>
-                    <li>
-
-                        <img src="./images/img 1-2.jpg" alt="Computer on desktop" width="360" />
-                        <img src="./images/img-1.jpg" alt="Computer on desktop" width="360" />
-                    </li>
-                    <li>
-                        <img src="./images/img 2-2.jpg" alt="phone and tabs" width="360" />
-                        <img src="./images/img-2.jpg" alt="phone and tabs" width="360" />
-                    </li>
-                    <li>
-                        <img src="./images/img 3-2.jpg" alt="phone and computer connected" width="360" />
-                        <img src="./images/img-3.jpg" alt="phone and computer connected" width="360" />
-                    </li>
-                </ul>
-        </section>
-        @@ -85,25 +81,25 @@ <h2>What are we doing</h2>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
-                <img src="./images/img-1-2.jpg" alt="photo of a man on a document Product Designer" width=" 264">
-                <img src="./images/img-4.jpg" alt="photo of a man on a document Product Designer" width="264">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </li>
-
-            <li>
-                <img src="./images/img-2-2.jpg" alt="photo of a man on a document Frontend Developer" width="264">
-                <img src="./images/img-5.jpg" alt="photo of a man on a document Frontend Developer" width="264">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </li>
-
-            <li>
-                <img src="./images/img-3-2.jpg" alt="photo of a woman on a document Marketing" width="264">
-                <img src="./images/img-6.jpg" alt="photo of a woman on a document Marketing" width="264">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </li>
-
-            <li>
-                <img src="./images/img-4-2.jpg" alt="photo of a man on a document UI Designer" width="264">
-                <img src="./images/img-7.jpg" alt="photo of a man on a document UI Designer" width="264">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </li>
-        </ul>
-        </section>
-    </main>
-    <footer>
-        <a href="./index.html">Webstudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
 </body>
 
 </html>
